--- a/src/tex/bibliography.tex
+++ b/src/tex/bibliography.tex
@@ -30,6 +30,7 @@
         \item \footnotesize{\url{https://developer.mozilla.org/en-US/docs/Web/API/File_System_Access_API}}
         \item \footnotesize{\url{https://docs.python.org/fr/3/library/tk.html}}
         \item \footnotesize{\url{https://realpython.com/python-gui-tkinter/}}
+        \item \footnotesize{\url{https://www.ffmpeg.org/documentation.html}}
     \end{itemize}
 
     \bibitem{Knowledge resources}
@@ -37,6 +38,7 @@
     \begin{itemize}
         \item \footnotesize{\url{https://wethegeek.com/programming-languages-for-raspberry-pi/}}
         \item \footnotesize{\url{https://fr.wikipedia.org/wiki/Wikipédia:Accueil_principal}}
+        \item \footnotesize{\url{https://www.ffmpeg.org/about.html}}
     \end{itemize}
     
 \end{thebibliography}
