--- a/src/tex/chapter_2.tex
+++ b/src/tex/chapter_2.tex
@@ -1,4 +1,5 @@
 \chapter{Environnement}
+    \label{Chapitre 2}
     % Presentation de la structure de l'environnement 2.1 2.2 2.3
     \section{Présentation de la structure}
         \subsection{L'université des Antilles}
@@ -34,40 +35,35 @@
         \vspace{0.2cm}
     
         Mon tuteur en entreprise durant le stage est Monsieur \underline{Olivier GROS} responsable de l'équipe Biologie de la Mangrove et Professeur des Universités.
-        Les étapes de développement de l'application est validée par Monsieur \underline{Manuel CLERGUE} également Professeur et chercheur à l'Université des Antilles.
-        Les membres de l'équipe projet Monsieur \underline{Mathieu BONNEAU} intervenant Mathématique et Madame \underline{SUZANNE} doctorante et la stagiaire en Biologie qui aura la gestion des expériences.
-
-    
+        Les étapes de développement de l'application est validée par Monsieur \underline{Manuel CLERGUE} Maître de Conférences à l'Université des Antilles.
+        Les membres de l'équipe projet sont Monsieur \underline{Mathieu BONNEAU} intervenant Mathématique et Madame \underline{SUZANNE} doctorante et la stagiaire en Biologie qui aura la gestion des expériences.
 
     \section{Organisation du stage} 
-    Tout au long du stage, des réunions régulières ont été organisées avec mon encadrant Monsieur \underline{Manuel CLERGUE} afin de faire le point sur l'avancement du projet.
+    Tout au long du stage, des réunions régulières ont été organisées avec mon encadrant, afin de faire le point sur l'avancement du projet.
 
     \begin{flushleft}
-        Le travail a été répartie en deux axes :
-        % Première partie en laboratoire
-        % Seconde partie sur le terrain 
+        Le travail a été réparti en trois axes :
         \begin{itemize}
-            \item  \textbf{Partie en laboratoire}
-            \item  \textbf{Partie sur le terrain}
-        \end{itemize}
-        
-        \vspace{0.5cm}      
+            \item \textbf{Partie Informatique} : La partie centrale du stage comportant le montage et l'installation du dispositif de capture vidéo ainsi que la mise en place de l'application.
+            \item  \textbf{Partie en laboratoire} : La partie secondaire comportant l’installation et l’ajustement du dispositif sur l’équipement de laboratoire.
+            \item  \textbf{Partie sur le terrain} : Immersion sur le terrain afin de découvrir les différents aspects de l'environnement et de la biodiversité de la mangrove de la Guadeloupe.
+        \end{itemize}        
     \end{flushleft}
 
     \subsection{Ressources fournies}
     Plusieurs ressources m'ont été fournies dans le cadre de mon stage.
     Dans un premier temps, j'ai reçu le matériel permettant l'acquisition vidéo qui sera abordé dans la section 4.2.
-    Une connexion filaire au réseau de l'Université des Antilles a été fournie pour me permettant d'installer des mises à jour de logiciels.
+    Une connexion filaire au réseau de l'Université des Antilles a été fournie me permettant d'installer les différents logiciels nécessaires à l'installation du dispositif ainsi que les mises à jour.
 
     \subsection{Contraintes particulière}
     Durant ce stage j'ai eu deux contraintes particulières :
     \begin{itemize}
-        \item Premièrement, le matériel ayant été commandé avant le début de mon stage et des différents aspects techniques.
-        \item Deuxièmement, le calendrier strict en début de stage demandant un système minimal en 10 jours.
+        \item \textbf{Premièrement} : Premièrement, le matériel a été commandé avant le début de mon stage. de ce fait je n’ai pas pu lister avec précision le matériel optimal pour réaliser le projet. A cela s’ajoute différentes difficultés techniques.
+        \item \textbf{Deuxièmement} : Il y avait un calendrier strict à suivre. Un système minimal devait avoir vu le jour 10 jours après le début du stage.
     \end{itemize}
 
     \vspace{0.5cm}
 
-    Dans la section suivante, nous allons présenter la problématique, notamment le sujet ainsi que l'objectifs du stage.
+    Dans la section suivante, nous allons présenter la problématique, notamment le sujet ainsi que l'objectif du stage.
 
     % Transition à faire
