--- a/src/tex/chapter_5.tex
+++ b/src/tex/chapter_5.tex
@@ -7,7 +7,7 @@
     % \section{Interface labo / traitement informatique}
 
     \section{Ressentis par rapport au stage}
-    Le travail scientifique que je réalise durant mes études mon permis de comprendre les différentes documentations allant du montage du Raspberry Pi à la programmation et l'utilisation de l'API PiCamera afin de concevoir l'application. 
+    Le travail scientifique que je réalise durant mes études m'a permis de comprendre les différentes documentations allant du montage du Raspberry Pi à la programmation et l'utilisation de l'API PiCamera afin de concevoir l'application. 
 
     % \begin{flushleft}
         % Nos divers formation en gestion de projet, mon permis de réussir le travail demandé sous contrainte de temps.
