--- a/src/tex/definition.tex
+++ b/src/tex/definition.tex
@@ -49,6 +49,22 @@
         \label{def:GUI}
     \end{definition}
 
+    \begin{definition}
+        \newcommand{\lab}[7]{(\ref{#7})}
+
+        H264 : H264 est un codec compressé de type video qui permet de compresser des images en une seule image.
+
+        \label{def:H}
+    \end{definition}
+
+    \begin{definition}
+        \newcommand{\lab}[8]{(\ref{#8})}
+
+        framework : Un framework est un ensemble de composants qui sont utilisés pour construire un logiciel.
+
+        \label{def:framework}
+    \end{definition}
+
 
 % \makeglossaries
 
