--- a/src/tex/chapter_1.tex
+++ b/src/tex/chapter_1.tex
@@ -4,11 +4,11 @@
 
     \vspace{0.2cm}
 
-    Projet avec le laboratoire de biologie, le projet concerne l'analyse de déplacements d'insectes afin de déterminer leur préférence sur des zones marquées par des odeurs, en environnement contrôlé (aquarium en laboratoire).
+    Le projet avec le laboratoire de biologie concerne l'analyse de déplacements d'insectes afin de déterminer leur préférence sur des zones marquées par des odeurs, en environnement contrôlé (aquarium en laboratoire).
 
     \vspace{0.2cm}
 
-    La mission est de configurer un système d'acquisition vidéo à base d'une Raspberry Pi, et de développer une interface intuitive afin de piloter cette acquisition de manière qu'elle puise être conduite par un biologiste.
+    La mission est de configurer un système d'acquisition vidéo à base d'un Raspberry Pi, et de développer une interface intuitive afin de piloter cette acquisition de manière à ce qu'elle puisse être conduite par un biologiste.
 
     \vspace{0.2cm}
 
@@ -17,7 +17,6 @@
 
     \vspace{0.2cm}
 
-    Dans ce rapport, je présente mon environnement de travail, ainsi que la mission principale que j'ai été amené à accomplir au sein du laboratoire ISYEB, à savoir, la conception d'un dispositif de prise de vue ainsi que la réalisation d'une application permettant l'acquisition de prise de vue.
-    En effet, le laboratoire ISYEB possède déjà un dispositif permettant les prises de vue, mais il s'agit d'un dispositif provisoire que les biologistes ont décidé de remplacer.
+    Dans ce rapport, je présente mon environnement de travail \underline{(\autoref{Chapitre 2})}, ainsi que la mission principale que j'ai été amené à accomplir au sein du laboratoire ISYEB \underline{(\autoref{Chapitre 3})}, à savoir, la conception d'un dispositif de prise de vue, ainsi que la réalisation d'une application permettant l'acquisition de prise de vue \underline{(\autoref{Chapitre 4})}. En effet, le laboratoire ISYEB possède déjà un dispositif permettant les prises de vue, mais il s'agit d'un dispositif provisoire que les biologistes ont décidé de remplacer.
 
 
