--- a/src/tex/chapter_3.tex
+++ b/src/tex/chapter_3.tex
@@ -1,6 +1,9 @@
 \chapter{Présentation de la problématique}
+    \label{Chapitre 3}
     \section{Présentation du sujet}
-    Projet avec le laboratoire de \textit{Biologie} de l'\textit{Université des Antilles}, le projet concerne en l'analyse de déplacement de \textbf{Gerridés} afin de déterminer leur préférence sur des zones marquées par des odeurs, en environnement contrôlé.
+    Le projet avec le laboratoire \textit{Biologie} de l'\textit{Université des Antilles}, concerne l'analyse de déplacement de \textbf{Gerridés}.
+
+    Le but étant de déterminer leur préférence entre différentes zones marquées par des odeurs, en environnement contrôlé.
 
     % \vspace{0.5cm}
 
@@ -16,22 +19,24 @@
 
     
     Les membres de cette famille sont communément appelés araignées d’eau, mais ce sont des insectes, on ne peut donc pas parler d'araignées. Cette appellation vient sans doute du fait de leurs longues pattes. Leur capacité à se déplacer sur l'eau leur vaut aussi le nom de patineurs de l'eau.
-    Afin de déterminer leur préférence, il est nécessaire d'avoir un dispositif adéquat de capture vidéo pour l'acquisition de données.
-     
 
+    Dans un environnement contrôlé, on place deux zones avec différentes odeurs (aliments) et on observe où les \textbf{Gerridés} préfèrent se déplacer. Afin de faciliter l'enregistrement de l'expérience, il est nécessaire d'avoir un système adéquat de capture vidéo.
+     
     \subsection{Positionnement du travail dans le projet}
-        Le tout étant fait de façon manuelle, les biologistes accrochaient une GoPro au-dessus du bac et ensuite devaient la retirer afin de pouvoir récupérer les données enregistrées. Ce dispositif était fonctionnel et leur permettait de réaliser des captures vidéo mais il leur fallait placer le bac dans le champ de vision de la GoPro a chaque fois qu'ils voulaient faire une capture.
+        Les biologistes accrochaient une GoPro au-dessus du bac et ensuite devaient la retirer afin de pouvoir récupérer les données enregistrées. Ce dispositif était fonctionnel et leur permettait de réaliser des captures vidéo mais il leur fallait placer le bac dans le champ de vision de la GoPro a chaque fois qu'ils voulaient faire une capture.
+
+
 
         \vspace{0.2cm}
         
         Il fallait aussi que la GoPro soit connectée à un ordinateur afin de pouvoir récupérer les données.
         Ajouter à cela le démarrage et l'arrêt de l'enregistrement de manière manuelle entrainant régulièrement le déplacement du bac (avec les mouvements). La disposition de la GoPro ne permettait de bien voir la prévisualisation de la capture vidéo.
-        Les biologistes ont donc décidé d'améliorer leur dispositif afin de pouvoir réaliser l'expérience de manière plus pratique.
+        Les biologistes ont donc souhaité d'améliorer leur dispositif afin de pouvoir réaliser l'expérience de manière plus pratique.
 
         \vspace{0.2cm}
 
-        % Transition provisoire ()
-        Ce qui nous permets d'enchainer sur l'objectif qui en découlent, comment nous pourront améliorer le dispositif.
+        % Transition provisoire 
+        Ce qui nous permets d'enchainer sur l'objectif qui en découlent : comment faire en sorte que les biologistes puissent réaliser l'expérience de manière plus pratique ?
 
     
 
@@ -39,24 +44,29 @@
 
     % Pourquoi : Avant c'était fait à la main et c'est pas très efficace.
 
-    \section{Objectifs}
-    
-        L’objectifs du stage est de réaliser l’installation et de configurer un dispositif de capture vidéo réalisé par un Raspberry Pi ainsi que de développer une application conviviale pour la gestion des vidéos.
+    \section{Objectif}
+        L’objectif du stage est de réaliser l’installation et de configurer un dispositif de capture vidéo réalisé par un Raspberry Pi. Il faudra aussi développer une application conviviale pour la gestion des vidéos.
         Il sera donc question de permettre au biologiste de réaliser des captures vidéo de manière plus pratique.
-        A défaut d'avoir un dispositif non-fixe comme énoncé, nous réaliserons un dispositif qui sera fixe.
+        Plutôt que d'avoir un dispositif mobile comme auparavant, nous réaliserons un dispositif qui sera fixe.
 
         \vspace{0.2cm}
 
-        Ce dispositif sera installé sur une potence au-dessus du bac et restera fixe en permanence permettant de limiter voire supprimer les divers déplacements.                
-        Une application conviviale sera développée afin de permettre au biologiste de réaliser des captures vidéo plus facilement.
-        Avec un écran nous pourront interagir avec l'application permettant de démarrer et d'arrêter un enregistrement.
-        Ainsi avec l'application nous pourront avoir une prévisualisation de la capture vidéo.
+        % Une application conviviale sera développée afin de permettre au biologiste de réaliser des captures vidéo plus facilement.
+        % Avec un écran nous pourronts interagir avec l'application permettant de démarrer et d'arrêter un enregistrement.
+        % Ainsi avec l'application nous pourronts avoir une prévisualisation de la capture vidéo.
 
-        \vspace{0.2cm}
-    
+        \begin{flushleft}
+            Le dispositif doit répondre à deux besoins principaux :
+            \begin{itemize}            
+                \item \textbf{1} : La fixité du dispositif.
+                \item \textbf{2} : Une interface simple.
+            \end{itemize}
+        \end{flushleft}
+                    
         Le but de cette application est de permettre aux biologistes de réaliser des captures vidéo enregistrées directement sur la carte SD de la Raspberry Pi.
         Il sera également possible de visualiser les capture vidéo enregistrées sur la carte SD du Raspberry Pi et si besoin de les récupérer à l'aide d'une clé USB ou un disque dur externe sans problème.
-
+        Ce dispositif sera installé sur une potence au-dessus du bac et restera fixe en permanence permettant de limiter voire supprimer les divers déplacements.                
+        
         \vspace{0.2cm}
 
         % Transition provisoire ()
