--- a/rapport_stage.tex
+++ b/rapport_stage.tex
@@ -48,10 +48,10 @@
 % Intro             ===============================
 
 % White Sheet        ===============================
-% \newpage
-% \thispagestyle{empty}
-% \mbox{}
-% \newpage
+\newpage
+\thispagestyle{empty}
+\mbox{}
+\newpage
 % White Sheet        ===============================
 
 % Remerciments             ===============================
