--- a/src/tex/bibliography.tex
+++ b/src/tex/bibliography.tex
@@ -1,4 +1,4 @@
-% webbographie (web)
+\renewcommand\bibname{Webographie}
 \begin{thebibliography}{9}
     \bibitem{installation}
     \textbf{Installation du Raspberry Pi}
