--- a/src/tex/chapter_3.tex
+++ b/src/tex/chapter_3.tex
@@ -35,21 +35,14 @@
 
         \vspace{0.2cm}
 
-        % Transition provisoire 
         Ce qui nous permets d'enchainer sur l'objectif qui en découlent : comment faire en sorte que les biologistes puissent réaliser l'expérience de manière plus pratique ?
-
-    
-
-    \vspace{0.1cm}
-
-    % Pourquoi : Avant c'était fait à la main et c'est pas très efficace.
 
     \section{Objectif}
         L’objectif du stage est de réaliser l’installation et de configurer un dispositif de capture vidéo réalisé par un Raspberry Pi. Il faudra aussi développer une application conviviale pour la gestion des vidéos.
         Il sera donc question de permettre au biologiste de réaliser des captures vidéo de manière plus pratique.
         Plutôt que d'avoir un dispositif mobile comme auparavant, nous réaliserons un dispositif qui sera fixe.
 
-        \vspace{0.2cm}
+        % \vspace{0.2cm}
 
         % Une application conviviale sera développée afin de permettre au biologiste de réaliser des captures vidéo plus facilement.
         % Avec un écran nous pourronts interagir avec l'application permettant de démarrer et d'arrêter un enregistrement.
@@ -65,9 +58,4 @@
                     
         Le but de cette application est de permettre aux biologistes de réaliser des captures vidéo enregistrées directement sur la carte SD de la Raspberry Pi.
         Il sera également possible de visualiser les capture vidéo enregistrées sur la carte SD du Raspberry Pi et si besoin de les récupérer à l'aide d'une clé USB ou un disque dur externe sans problème.
-        Ce dispositif sera installé sur une potence au-dessus du bac et restera fixe en permanence permettant de limiter voire supprimer les divers déplacements.                
-        
-        \vspace{0.2cm}
-
-        % Transition provisoire ()
-        Voyons maintenant comment nous allons nous y prendre pour réaliser ce dispositif ainsi que l'application dédiée.
+        Ce dispositif sera installé sur une potence au-dessus du bac et restera fixe en permanence permettant de limiter voire supprimer les divers déplacements. Voyons maintenant comment nous allons nous y prendre pour réaliser ce dispositif ainsi que l'application dédiée.
